deployments/lockup/v1.0/periphery/README.md
# v1.0.0

## Contract Deployed

- SablierV2Archive
- SablierV2ProxyPlugin
- SablierV2ProxyTarget

## Sources

- Commit: [ddb93e2](https://github.com/sablier-labs/v2-periphery/commit/ddb93e211a54eb69b0bca2b4b3ad42a0c88e135b)
- Package: [@sablier/v2-periphery@1.0.0](https://www.npmjs.com/package/@sablier/v2-periphery/v/1.0.0)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.19 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 10,000 |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

### Mainnets

| Chain           | Salt                          |
| :-------------- | :---------------------------- |
| Arbitrum One    | ChainID 42161, Version 1.0.0  |
| Avalanche       | ChainID 43114, Version 1.0.0  |
| Base            | ChainID 8453, Version 1.0.0   |
| BNB Smart Chain | ChainID 56, Version 1.0.0     |
| Gnosis          | ChainID 100, Version 1.0.0    |
| Mainnet         | ChainID 1, Version 1.0.0      |
| Optimism        | ChainID 10, Version 1.0.0     |
| Polygon         | ChainID 137, Version 1.0.0    |
| Scroll          | ChainID 534352, Version 1.0.0 |

### Testnets

| Chain   | Salt                            |
| :------ | :------------------------------ |
| Goerli  | ChainID 5, Version 1.0.0        |
| Sepolia | ChainID 11155111, Version 1.0.0 |

# v1.0.1

## Contract Deployed

- SablierV2ProxyTargetApprove

## Sources

- Commit: [f8a14ed](https://github.com/sablier-labs/v2-periphery/tree/f8a14edb11cac2e0467f543d0a706dcc7d0010f6)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.21 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 10000  |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

### Mainnets

| Chain           | Salt                          |
| :-------------- | :---------------------------- |
| Arbitrum One    | ChainID 42161, Version 1.0.1  |
| Avalanche       | ChainID 43114, Version 1.0.1  |
| Base            | ChainID 8453, Version 1.0.1   |
| BNB Smart Chain | ChainID 56, Version 1.0.1     |
| Gnosis          | ChainID 100, Version 1.0.1    |
| Optimism        | ChainID 10, Version 1.0.1     |
| Polygon         | ChainID 137, Version 1.0.1    |
| Scroll          | ChainID 534352, Version 1.0.1 |

### Testnets

| Chain   | Salt                            |
| :------ | :------------------------------ |
| Goerli  | ChainID 5, Version 1.0.1        |
| Sepolia | ChainID 11155111, Version 1.0.1 |
