deployments/lockup/v1.1/periphery/README.md
# v1.1.0

See the [changelog](https://github.com/sablier-labs/v2-periphery/blob/main/CHANGELOG.md).

## Contract Deployed

- SablierV2Batch
- SablierV2MerkleStreamerFactory

## Sources

- Commit: [8350d10](https://github.com/sablier-labs/v2-periphery/commit/8350d10b28314475951b17651f30c2ede33d7722)
- Package: [@sablier/v2-periphery@1.1.0](https://www.npmjs.com/package/@sablier/v2-periphery/v/1.1.0)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.21 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 10,000 |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

### Mainnets

| Chain           | Salt                          |
| :-------------- | :---------------------------- |
| Arbitrum One    | ChainID 42161, Version 1.1.0  |
| Base            | ChainID 8453, Version 1.1.0   |
| BNB Smart Chain | ChainID 56, Version 1.1.0     |
| Gnosis          | ChainID 100, Version 1.1.0    |
| Mainnet         | ChainID 1, Version 1.1.0      |
| Optimism        | ChainID 10, Version 1.1.0     |
| Polygon         | ChainID 137, Version 1.1.0    |
| Scroll          | ChainID 534352, Version 1.1.0 |

### Testnets

| Chain            | Salt                            |
| :--------------- | :------------------------------ |
| Arbitrum Sepolia | ChainID 421614, Version 1.1.0   |
| Sepolia          | ChainID 11155111, Version 1.1.0 |

# v1.1.1

See the [changelog](https://github.com/sablier-labs/v2-periphery/blob/main/CHANGELOG.md).

## Contract Deployed

- SablierV2Batch
- SablierV2MerkleStreamerFactory

## Sources

- Commit: [53e2590](https://github.com/sablier-labs/v2-periphery/commit/53e259087984ff748fca6fb932fdb9c663c2b365)
- Package: [@sablier/v2-periphery@1.1.1](https://www.npmjs.com/package/@sablier/v2-periphery/v/1.1.1)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.23 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 10,000 |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

### Mainnets

| Chain     | Salt                         |
| :-------- | :--------------------------- |
| Avalanche | ChainID 43114, Version 1.1.0 |
| LightLink | ChainID 1890, Version 1.1.0  |
| Taiko     | No salt                      |
| zkSync    | No salt                      |

### Testnets

| Chain            | Salt                            |
| :--------------- | :------------------------------ |
| Base Sepolia     | ChainID 84532, Version 1.1.1    |
| Optimism Sepolia | ChainID 11155420, Version 1.1.0 |

**Note:** we have accidentally set the version to "1.1.0" in the Salt. It should have been "v1.1.1".
